--- a/src/scss/_index.scss
+++ b/src/scss/_index.scss
@@ -5,285 +5,97 @@ body {
 // NAVIGATION
 nav {
 
-    .right-wrapper {
+    border-bottom: 2px solid $color-purple;
 
-        a {
-            font-size: 0.7rem;
-            margin-left: 0.5rem;
-        }
-
-        i {
-            margin-right: 5px;
-            // color: rgb(102, 102, 102);
-            font-size: 0.5rem;
-        }
+    a.nav-link {
+        color: #000;
     }
 
-    a {
-        color: #fff !important;
-    }
-
-    .nav-item {
-        margin: 0.5rem 0 !important;
+    .dropdown-menu {
+        border: 2px solid $color-purple;
     }
 
     &.navbar {
-        background-color: #000;
+        background-color: #fff;
         margin-right: auto;
         justify-content: flex-end;
     }
 
-    ul.submenu {
-        list-style: none;
-        padding-left: 0.5rem;
-
-        i {
-            padding-right: 5px;
-        }
-    }
-
-    .submenu .nav-item {
-        text-transform: capitalize;
-        margin: 0 !important;
-    }
-
     .navbar-brand {
-        width: 6rem;
-    }
+        width: 14rem;
 
-    .bold {
-        font-weight: 700;
-    }
-
-
-  .navbar-toggler {
-    position: relative;
-    border: none;
-    background: transparent !important;
-  }
-
-  .navbar-toggler:focus {
-    outline: none;
-    background: transparent !important;
-  }
-
-  .navbar-toggler .icon-bar {
-    background-color: #fff;
-    transform: rotate(0deg) translate(0px, 0px);
-    transition: ease all .2s;
-  }
-
-  .navbar-toggler .icon-bar {
-    display: block;
-    width: 22px;
-    height: 2px;
-    border-radius: 1px;
-  }
-
-  .navbar-toggler .icon-bar+.icon-bar {
-    margin-top: 4px;
-  }
-
-  .icon-bar:nth-child(2) {
-    width: 16px;
-    transition: ease all .2s;
-  }
-
-  .navbar-toggler:hover>.icon-bar:nth-child(2),
-  .navbar-toggler:focus>.icon-bar:nth-child(2){
-    width: 22px;
-    transition: ease all .2s;
-  }
-
-  .navbar-toggler:active>.icon-bar:nth-child(2) {
-    width: 22px;
-    transition: ease all .2s;
-  }
-
-  .navbar-toggler:not(.collapsed) .icon-bar:nth-child(1) {
-    transform: rotate(45deg) translate(5px, 4px);
-    transition: ease all .2s;
-  }
-
-  .navbar-toggler:not(.collapsed) .icon-bar:nth-child(2) {
-    opacity: 0;
-    transition: ease all .2s;
-  }
-
-  .navbar-toggler:not(.collapsed) .icon-bar:nth-child(3) {
-    transform: rotate(-45deg) translate(4px, -4px);
-    transition: ease all .2s;
-  }
-
-  .nav-item {
-    font-size: 0.8rem;
-    margin: 4px;
-    text-transform: uppercase;
-  }
-
-  .navbar-nav {
-    flex-direction: column;
-
-    @include media-breakpoint-up(lg) {
-        flex-direction: row;
-        justify-content: space-around;
-        flex-wrap: wrap;
-    }
-  }
-
-  .navbar-brand {
-      margin: 1rem 0;
-  }
-}
-
-.header {
-
-    &-wrapper {
-        height: 25rem;
-        display: flex;
-        flex-direction: row;
-    }
-
-    &-1 {
-        flex: 1;
-        overflow: hidden;
-        background-color: #500E76;
-        position: relative;
-
-        img {
+        .logo {
             width: 100%;
-            height: 100%;
-            object-fit: cover;
-            opacity: 0.6;
+            height: auto;
         }
     }
 
-    &-2 {
-        flex: 1;
-        overflow: hidden;
-        background-color: #1B952A;
-        position: relative;
-
-        img {
-            width: 100%;
-            height: 100%;
-            object-fit: cover;
-            opacity: 0.7;
-        }
-    }
-
-    &-content {
-        padding: 2rem 2.5rem;
-        background-color: rgba(0, 0, 0, 0.651);
-        color: #fff;
-        text-align: center;
-        width: 40%;
-
-        position: absolute;
-        left: 50%;
-        top: 50%;
-        transform: translate(-50%, -50%);
-
-        h1 {
-            // font-family: "Noto Serif";
-            font-weight: 300;
-            font-size: 2rem;
-            border-bottom: 2px solid white;
-            margin-bottom: 0.9rem;
+    .right-corner {
+        ul {
+            list-style: none;
         }
 
+        li {
+            display: inline;
 
-        .btn {
-            transition: all 200ms cubic-bezier(0.390, 0.500, 0.150, 1.360);
-            color: white;
-	        display: inline-block;
-	        margin: 10px auto;
-	        text-decoration: none;
-	        border-radius: 4px;
-            padding: 0.5rem  1rem;
-            box-shadow: #fff 0 0px 0px 2px inset;
+            a {
+                // display: inline-block;
+                font-size: 0.8rem;
+                padding: 0.5rem 0.5rem;
+                display: inline-flex;
+                align-items: center;
 
-            &:hover {
-                    color: #000;
-                    box-shadow: #fff 0 0px 0px 40px inset;
+                i {
+                    font-size: 0.5rem;
+                    margin-right: 6px;
+                    color: #333;
+                }
             }
         }
     }
+ }
+
+//  HEADER
+
+.header {
+    height: 30rem;
+    overflow: hidden;
+
+    img {
+        width: 100%;
+        height: auto;
+        object-fit: cover;
+    }
 }
+
+// BLOG AREA
 
 .blog {
     margin: 3rem 0;
 
-    &-entry {
-        margin: 9rem auto;
-        height: 30rem;
-        width: 75%;
-
-        display: grid;
-        grid-gap: 0.5rem;
-        grid-template-columns: repeat(6, 100px) 1fr;
-        grid-template-rows: repeat(4, 100px);
-        justify-content: center;
+    &-row {
+        margin-bottom: 3rem;
     }
 
-    &-img {
-        background: #333;
-        grid-column: 1 / span 3;
-        grid-row: 1 / span 3;
 
-        box-shadow: 10px 10px #0B50A1;
-        overflow: hidden;
-        object-fit: cover;
-
-        img {
-            width: 100%;
-            height: 100%;
-            display: block;
-            object-fit: cover;
-        }
+    .card {
+        border-color: $color-purple;
+        flex: 1;
     }
 
-    &-headline {
-        grid-column: 3 / -1;
-        grid-row: 2 / -1;
-        text-align: left;
-
-        h2 {
-            color: black;
-            // font-family: 'Noto Serif', serif;
-            font-weight: 300;
-            font-size: 2rem;
-            z-index: 6;
-            background-color: #FCE401;
-            padding: 0.2rem 1px;
-            display: inline;
-            line-height: 2;
-            word-spacing: 2px;
-        }
+    .btn-primary {
+        background-color: $color-purple;
+        border-color: $color-purple;
     }
 
-    &-text {
-        grid-column: 1 / -1;
-        grid-row: 4 / -1;
-        margin: 1.5rem 0px;
+    .sidebar {
+        border: 1px solid $color-purple;
+        border-radius: 0.25rem;
+        // flex: 1 1 auto;
+        flex: 2;
+        padding: 1.25rem;
+    }
 
-        p {
-        //   font-family: 'Roboto', sans-serif;
-          word-spacing: 3px;
-          line-height: 1.4;
-          text-align: left;
-        }
-
-        // a {
-        //     color: #1B952A;
-        //     text-decoration: none;
-        //     border-bottom: 1px solid transparent;
-        // }
-
-        // a:hover {
-        //     border: 1px solid #1B952A;
-        // }
-      }
 }
 
 .footer {
@@ -335,6 +147,7 @@ nav {
     display: inline-block;
     // margin: 10px auto;
     border-bottom: 1px solid #000;
+    font-weight: 700;
 
     &:hover {
             color: #1B952A;
