--- a/src/scss/_index.scss
+++ b/src/scss/_index.scss
@@ -1,24 +1,49 @@
 body {
-    font-family: "Brandon Text", sans-serif;
+    font-family: "Open Sans", sans-serif;
 }
+
+// font-family: 'Montserrat', sans-serif;
 
 // NAVIGATION
 nav {
 
-    border-bottom: 2px solid $color-purple;
+    font-family: 'Open Sans Condensed', sans-serif;
+    font-weight: 700;
 
-    a.nav-link {
-        color: #000;
+    @media (min-width: 980px) {
+        .dropdown:hover .dropdown-menu,
+        .dropdown:focus .dropdown-menu {
+           display: block;
+        }
     }
 
-    .dropdown-menu {
-        border: 2px solid $color-purple;
+    .custom-toggler.navbar-toggler {
+        border-color: #000;
+        border-width: 2px;
+    }
+    .custom-toggler .navbar-toggler-icon {
+      background-image: url("data:image/svg+xml;charset=utf8,%3Csvg viewBox='0 0 32 32' xmlns='http://www.w3.org/2000/svg'%3E%3Cpath stroke='rgba(0,0,0)' stroke-width='2' stroke-linecap='round' stroke-miterlimit='10' d='M4 8h24M4 16h24M4 24h24'/%3E%3C/svg%3E");
+    }
+
+    &.navbar {
+        border-bottom: 2px solid $color-purple;
     }
 
     &.navbar {
         background-color: #fff;
-        margin-right: auto;
-        justify-content: flex-end;
+    }
+
+    & a.nav-link {
+        color: #000 !important;
+        font-size: 1rem;
+    }
+
+    .dropdown-menu {
+        border: 2px solid $color-purple;
+
+        .dropdown-item {
+            font-weight: 700;
+        }
     }
 
     .navbar-brand {
@@ -31,29 +56,23 @@ nav {
     }
 
     .right-corner {
-        ul {
-            list-style: none;
-        }
-
-        li {
+        a {
             display: inline;
+            font-size: 0.7rem;
+            padding: 0 0.2rem;
+            display: inline-flex;
+            align-items: center;
 
-            a {
-                // display: inline-block;
-                font-size: 0.8rem;
-                padding: 0.5rem 0.5rem;
-                display: inline-flex;
-                align-items: center;
-
-                i {
-                    font-size: 0.5rem;
-                    margin-right: 6px;
-                    color: #333;
-                }
+            i {
+                color: $color-purple;
+                padding-right: 5px;
+                font-size: 5px;
             }
         }
     }
  }
+
+
 
 //  HEADER
 
@@ -73,14 +92,17 @@ nav {
 .blog {
     margin: 3rem 0;
 
-    &-row {
-        margin-bottom: 3rem;
-    }
 
 
     .card {
-        border-color: $color-purple;
+        border: 2px solid $color-purple;
         flex: 1;
+
+        &-img-top {
+            height: 250px;
+            width: 100%;
+            object-fit: cover;
+        }
     }
 
     .btn-primary {
@@ -89,25 +111,32 @@ nav {
     }
 
     .sidebar {
-        border: 1px solid $color-purple;
+        border: 2px solid $color-purple;
         border-radius: 0.25rem;
-        // flex: 1 1 auto;
         flex: 2;
         padding: 1.25rem;
     }
 
+    .pagination {
+
+        .page-link {
+            color: black;
+            border: 1px solid $color-purple;
+        }
+    }
 }
 
 .footer {
-    background-color: #000;
-    color: rgb(187, 187, 187);
+    background-color: $color-purple;
+    // color: rgb(187, 187, 187);
+    color: #fff;
     padding: 4rem 0;
 
     &-logo {
         width: 20rem;
     }
 
-    ul {
+    ul.footer-menu {
         list-style: none;
         font-size: 0.8rem;
         display: flex;
@@ -115,18 +144,22 @@ nav {
         margin-top: 2rem;
 
         li {
-            border-right:solid 1px #fff;
+            // border-right:solid 1px #fff;
+            border-right:solid 1px rgb(187, 187, 187);
+            font-weight: 700;
+
         }
 
         li:not(:last-child) {
-            border-right:solid 1px #fff;/* This will not give border to last li element */
+            // border-right:solid 1px #fff;/* This will not give border to last li element */
+            border-right:solid 1px rgb(187, 187, 187);
         }
 
         a {
             color: white;
+            // color: rgb(187, 187, 187);
             display: inline-block;
             text-transform: uppercase;
-
         }
     }
 
@@ -138,21 +171,19 @@ nav {
     .copyright {
         font-size: 0.8rem;
     }
+
+    .social-icons {
+        i {
+            padding: 0 1rem;
+        }
+    }
 }
 
 
-.btn-more {
-    transition: all 200ms cubic-bezier(0.390, 0.500, 0.150, 1.360);
-    color: #000;
-    display: inline-block;
-    // margin: 10px auto;
-    border-bottom: 1px solid #000;
-    font-weight: 700;
 
-    &:hover {
-            color: #1B952A;
-            text-decoration: none;
-            border-bottom: 1px solid #1B952A;
-    }
+
+.btn-end {
+    width: auto;
+    align-self: flex-start;
 }
 
