--- a/src/scss/_index.scss
+++ b/src/scss/_index.scss
@@ -7,11 +7,12 @@ body {
 // NAVIGATION
 nav {
 
+
     // &.navbar {
     //     display: block;
     // }
 
-    font-family: 'Open Sans Condensed', sans-serif;
+    // font-family: 'Open Sans Condensed', sans-serif;
     font-weight: 700;
 
     @media (min-width: 980px) {
@@ -29,13 +30,18 @@ nav {
       background-image: url("data:image/svg+xml;charset=utf8,%3Csvg viewBox='0 0 32 32' xmlns='http://www.w3.org/2000/svg'%3E%3Cpath stroke='rgba(0,0,0)' stroke-width='2' stroke-linecap='round' stroke-miterlimit='10' d='M4 8h24M4 16h24M4 24h24'/%3E%3C/svg%3E");
     }
 
-    &.navbar {
-        border-bottom: 2px solid $color-purple;
-    }
 
     &.navbar {
         background-color: #fff;
+        border-bottom: 2px solid $color-purple;
+        display: flex;
+        flex-direction: row;
         // align-items: flex-start;
+
+        @include media-breakpoint-up(lg) {
+            flex-direction: column;
+            align-items: flex-start;
+        }
     }
 
     & a.nav-link {
@@ -62,10 +68,42 @@ nav {
         }
     }
 
+    // .wrapper-left {
+    //     width: 100%;
+    //     display: flex;
+    //     flex-direction: row;
+
+    //     @include media-breakpoint-up(lg) {
+    //         flex-direction: column;
+    //      }
+
+    //     button {
+    //         align-self: flex-start;
+
+    //         @include media-breakpoint-up(lg) {
+    //             align-self: center;
+    //          }
+    //     }
+    // }
+
+    div.navbar-collapse {
+        @include media-breakpoint-up(lg) {
+             flex-direction: column !important;
+             width: 100%;
+        }
+    }
+
+
     .right-corner {
-        justify-content: flex-start;
-        align-content: flex-start;
-        margin-left: auto;
+        // justify-content: flex-start;
+        // align-content: flex-start;
+        // margin-left: 0;
+
+        // @include media-breakpoint-up(lg) {
+        //     margin-left: auto;
+        // }
+
+        align-self: flex-end;
         a {
             display: inline;
             font-size: 0.7rem;
@@ -80,6 +118,11 @@ nav {
             }
         }
     }
+
+    div.dropdown-menu {
+        border: none;
+    }
+
  }
 
 
@@ -101,6 +144,17 @@ nav {
 
 .blog {
     margin: 3rem 0;
+
+
+
+
+    &>.container>.row {
+        flex-direction: column-reverse;
+
+        @include media-breakpoint-up(lg) {
+            flex-direction: row;
+        }
+    }
 
 
 
@@ -153,16 +207,11 @@ nav {
         justify-content: center;
         margin-top: 2rem;
 
-        li {
-            // border-right:solid 1px #fff;
+        li:not(:last-child) {
+            /* This will not give border to last li element */
             border-right:solid 1px rgb(187, 187, 187);
             font-weight: 700;
-
-        }
-
-        li:not(:last-child) {
-            // border-right:solid 1px #fff;/* This will not give border to last li element */
-            border-right:solid 1px rgb(187, 187, 187);
+            border-right:solid 1px #fff;
         }
 
         a {
@@ -197,3 +246,11 @@ nav {
     align-self: flex-start;
 }
 
+
+
+
+// @include media-breakpoint-up(xs) { ... }
+// @include media-breakpoint-up(sm) { ... }
+// @include media-breakpoint-up(md) { ... }
+// @include media-breakpoint-up(lg) { ... }
+// @include media-breakpoint-up(xl) { ... }
