--- a/src/scss/_index.scss
+++ b/src/scss/_index.scss
@@ -42,11 +42,22 @@ nav {
             flex-direction: column;
             align-items: flex-start;
         }
+
+        .navbar-nav {
+            margin-top: 1rem;
+        }
     }
 
     & a.nav-link {
         color: #000 !important;
         font-size: 1.3rem;
+        border-bottom: 3px solid transparent;
+        display: inline-block;
+
+        &:hover,
+        &:focus {
+            border-bottom: 3px solid $color-purple;
+        }
     }
 
     .dropdown-menu {
@@ -66,6 +77,10 @@ nav {
             width: 14rem;
         }
 
+        @include media-breakpoint-up(lg) {
+            margin-top: 1rem;
+        }
+
         .logo {
             width: 100%;
             height: auto;
@@ -78,6 +93,8 @@ nav {
              width: 100%;
         }
     }
+
+
 
 
     .right-corner {
@@ -96,6 +113,12 @@ nav {
             padding: 0 0.2rem;
             display: inline-flex;
             align-items: center;
+            border-bottom: 2px solid transparent;
+
+            &:hover,
+            &:focus {
+                border-bottom: 2px solid $color-purple;
+            }
 
             i {
                 color: $color-purple;
@@ -132,6 +155,20 @@ nav {
         height: auto;
         object-fit: center;
     }
+}
+
+.header:before {
+    content: "";
+	display: block;
+	position: absolute;
+	left: 0;
+	bottom: 6em;
+	width: 100%;
+	height: calc(20rem + 10em);
+	z-index: -1;
+	transform: skewY(-3.5deg);
+	background-size: cover;
+	border-bottom: .2em solid #fff;
 }
 
 // BLOG AREA
@@ -180,6 +217,18 @@ nav {
         border-radius: 0.25rem;
         flex: 2;
         padding: 1.25rem;
+
+        .language div {
+            // text-align: center;
+            width: 45px;
+            border: 2px solid $color-purple;
+            border-radius: 50%;
+            display: inline-block;
+            padding: 10px;
+            font-size: 1rem;
+            font-weight: 700;
+            margin: 0;
+        }
     }
 
     .pagination {
@@ -196,6 +245,7 @@ nav {
     // color: rgb(187, 187, 187);
     color: #fff;
     padding: 4rem 0;
+    margin-top: 2rem;
 
     &-logo {
         width: 20rem;
@@ -209,7 +259,7 @@ nav {
         list-style: none;
         font-size: 0.8rem;
         display: flex;
-        justify-content: center;
+        // justify-content: center;
         flex-direction: column;
         margin-top: 1rem;
         padding: 0;
@@ -229,7 +279,23 @@ nav {
 
         li {
             font-weight: 700;
+            padding: 0;
+
+            @include media-breakpoint-up(md) {
+                padding: 0.5rem 1rem;
+            }
         }
+
+        li:first-child {
+            padding-left: 0rem;
+
+            @include media-breakpoint-up(md) {
+                padding-left: 0;
+            }
+        }
+
+
+
 
         a {
             color: white;
@@ -237,10 +303,6 @@ nav {
             text-transform: uppercase;
             padding: 0.2rem 0;
             font-size: 1rem;
-
-            @include media-breakpoint-up(md) {
-                padding: 0.5rem 1rem;
-            }
         }
     }
 
@@ -258,7 +320,7 @@ nav {
         margin-top: 1rem;
 
         i {
-            padding: 0 1rem;
+            padding-right:  1.5rem;
         }
     }
 }
@@ -269,7 +331,6 @@ nav {
 .btn-end {
     width: auto;
 }
-
 
 
 
