--- a/src/scss/_post.scss
+++ b/src/scss/_post.scss
@@ -1,6 +1,13 @@
 .blog-post {
     // margin-top: 5rem;
-    margin: 5rem 3rem;
+    margin: 1rem 0;
+
+    @include media-breakpoint-up(md) {
+        margin: 2rem 1rem;
+    }
+    @include media-breakpoint-up(lg) {
+        margin: 5rem 3rem;
+    }
 
     .entry {
         margin-top: 2rem;
@@ -9,18 +16,19 @@
         flex-direction: column;
 
         @include media-breakpoint-up(lg) {
-            margin-top: 8rem;
+            margin-top: 0;
         }
 
         word-break: normal;
 
         .post-title {
+            margin: 1rem 0;
             font-size: 2rem;
             text-transform: capitalize;
-            font-weight: lighter;
+            // font-weight: lighter;
 
             @include media-breakpoint-up(md) {
-                font-size: 2.5rem;
+                font-size: 2.6rem;
             }
 
             @include media-breakpoint-up(lg) {
@@ -31,9 +39,9 @@
 
         .post-date {
             font-size: 0.7rem;
-            border-bottom: 4px solid $color-purple;
-            padding-bottom: 1px;
-            margin-bottom: 0.5rem;
+            // border-bottom: 2px solid $color-purple;
+            // padding-bottom: 1px;
+            margin-top: 1.5rem;
             align-self: flex-start;
 
             @include media-breakpoint-up(md) {
@@ -47,10 +55,10 @@
 
         .post-author {
             font-size: 0.7rem;
-            border-bottom: 4px solid $color-purple;
-            padding-bottom: 1px;
+            // border-bottom: 2px solid $color-purple;
+            // padding-bottom: 1px;
             display: inline-block;
-            margin-bottom: 0.5rem;
+            margin-top: 0.5rem;
             align-self: flex-start;
 
             @include media-breakpoint-up(md) {
@@ -84,7 +92,7 @@
             width: 100%;
             height: 1px;
             border: none;
-            margin: 0 auto 1em;
+            margin: 0 auto 1rem;
         }
         }
 
@@ -98,6 +106,16 @@
     display: flex;
     flex-direction: column;
     justify-content: center;
+
+    a {
+        display: flex;
+        justify-content: center;
+        align-items: center;
+    }
+
+    .arr {
+        font-size: 1.5rem;
+    }
 
     @include media-breakpoint-up(lg) {
         flex-direction: row;
