--- a/src/scss/_variables.scss
+++ b/src/scss/_variables.scss
@@ -1,2 +1,7 @@
 $color-purple: #500E76;
 $enable-caret: false !default;
+
+// fonts
+$font-bold: 'brandon_textbold';
+$font-light: 'brandon_textlight';
+$font-regular: 'brandon_text_regularregular';
