--- a/src/scss/_index.scss
+++ b/src/scss/_index.scss
@@ -1,5 +1,5 @@
 body {
-    font-family: "Brandon Text", sans-serif;
+    font-family: $font-regular, sans-serif;
 }
 
 // font-family: 'Montserrat', sans-serif;
@@ -229,6 +229,10 @@ nav {
             width: 100%;
             object-fit: cover;
         }
+
+        // &-title {
+        //     font-family: $font-light, sans-serif;
+        // }
     }
 
     .btn-primary {
